# libem

./: .gitignore  CMakeLists.txt  LICENSE  em.c  em.h
